Move the tunnel onto Kwik and drop the hand-written one
ReliableTunnelConnection was 1345 lines carrying its own retransmission,
congestion control and ordering over a raw socket. 26.1 replaced that with
Kwik, which is a QUIC implementation that has already had those problems
solved and reviewed, so common comes across whole: the five P2pKwik classes
arrive, the hand-written tunnel leaves, and SafraRendezvousClient loses the
session indirection that made it twice the length it needed to be.

common holds no Minecraft, which is why it can be taken across a Minecraft
version gap at all. Everything it touches stayed behind and was looked at one
file at a time. Two places did not take the 26.1 text:

  P2pErrorComponents builds its ClickEvent by reflection here, because that
  class changes shape inside 1.21.x and one file has to serve twelve
  versions. Only the new failure-kind check came over.

  The loaders keep their own P2pManager call sites; the pre-3.0 rendezvous
  branch it used to pick between was already unreachable, since both branches
  default the site API to 3.0.

Five fixes ride along with common, the STUN refresh among them - 1.21 still
refreshed every twenty seconds, which is the interval that was handing this
router's port away mid-session.

warmUp() was missing from all three client entry points. It builds the Kwik
certificate ahead of time, so without it the key generation happens at the
moment the player presses Open to LAN.

Forge carried netty-codec-quic, including a per-platform native, from an
approach that no source has referenced for some time. Nothing reads
safra.p2p.diagnostics, safra.p2p.experimentalQuic or
safra.p2p.forceDirectThenTurn as system properties any more either; the dev
run configs were setting three switches that do nothing. Diagnostics is a
build flag now, the same as 26.1: -Pdiagnostics=true.